--- a/styles.css
+++ b/styles.css
@@ -409,8 +409,8 @@
 
 .main__container h2 {
 
-  padding-top: 80px;
-  padding-bottom: 70px;
+  padding-top: 50px;
+  padding-bottom: 20px;
   margin-left: 2rem;
   font-size: 1.5rem;
   font-weight: 700;
@@ -419,7 +419,7 @@
 
 .main__container p {
   margin-left: 2rem;
-  padding-bottom: 70px;
+  padding-bottom: 20px;
   font-size: 1rem;
   font-weight: 700;
   color: var(--white);
@@ -431,7 +431,7 @@
   opacity: 0.9;
   width: 100%;
   padding-top: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   position: relative;
   outline: solid;
   outline-color:var(--gold);
@@ -509,7 +509,6 @@
 /* Slideshow container */
 .slideshow-container {
   width: 100%;
-  height: 80%;
   background-color:var(--black);
   opacity: 0.8;
   position: sticky;
@@ -562,6 +561,7 @@
   opacity: 1;
   top: 0;
   margin-left: 0.5%;
+  display: inline-block;
 }
 
 #slideInfoCard h1{
@@ -573,3 +573,49 @@
   background-image: none;
   background-color: inherit;
 }
+
+#slideInfoCard p{
+  background-image: none;
+  background-color: inherit;
+}
+
+
+/* Charts */
+.chart{
+  z-index: 3;
+  margin: 10px;
+  padding: 15px;
+}
+
+.slideTable{
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 0;
+  grid-row-gap: 0px;
+}
+
+@media only screen and (min-width: 950px) {
+  .slideTable {
+    grid-template-columns: 47.5% 47.5%;
+    grid-column-gap: 5%;
+    grid-row-gap: 40px;
+    margin-right: 25px;
+}}
+
+.group{
+  margin: 20px 50px;
+  background-image: linear-gradient(to top, var(--black) 0%, var(--gold) 50%);
+  outline: solid;
+  border-style: double;
+  border-width: thick;
+  border-radius: 15px;
+  outline-width: thin;
+  border-color: var(--black);
+  outline-color: var(--gold);
+  align-items: center;
+}
+
+.group h2 {
+  color: var(--black);
+}
+
